# bephantbr-indurad-quanyx-service

./: .gitignore  README-STARTUP.md  README.md  change-to-ros-process.service  change-to-service-process.service  changeToRos.sh  changeToService.sh  configuration-boot.service  configuration.sh  cv_bridgeConfig.cmake  data-sender-startup.service  dataSenderStartup.sh  main.py  reload-service.service  requirements.txt  setup-omega-ash-api.service  setup-omega-ash-opc.service  setup.sh  start-find-objects-ros.service  startFindObjectsROS.sh  startup-boot.service  startupBoot.sh  teste.json  updater.py  updater.service  updater.sh
ROS/: CMakeLists.txt  README.md  ROS_install.md
ROS/disp_to_pcl/: CMakeLists.txt  README.md  disp_to_pcl.cpp  disp_to_pcl.h  disp_to_pcl.launch  package.xml
ROS/find_objects/: CMakeLists.txt  main.cpp  package.xml
ROS/find_objects/pcds/2022-12-20:14-29-07/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
ROS/find_objects/pcds/2022-12-20:14-34-02/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  38.pcd  39.pcd  4.pcd  40.pcd  41.pcd  42.pcd  43.pcd  44.pcd  (+24 more)
ROS/find_objects/pcds/2022-12-22:12-07-54/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  (+228 more)
ROS/find_objects/pcds/2022-12-23:10-10-35/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  (+220 more)
ROS/find_objects/pcds/2022-12-23:10-11-36/: 0.pcd  1.pcd  10.pcd  100.pcd  1000.pcd  1001.pcd  1002.pcd  1003.pcd  1004.pcd  1005.pcd  1006.pcd  1007.pcd  1008.pcd  1009.pcd  101.pcd  1010.pcd  1011.pcd  1012.pcd  1013.pcd  1014.pcd  1015.pcd  1016.pcd  1017.pcd  1018.pcd  1019.pcd  102.pcd  1020.pcd  1021.pcd  1022.pcd  1023.pcd  1024.pcd  1025.pcd  1026.pcd  1027.pcd  1028.pcd  1029.pcd  103.pcd  1030.pcd  1031.pcd  1032.pcd  (+5903 more)
ROS/image_viewer/: CMakeLists.txt  Colormap.h  imageReceiver.cpp  imageReceiver.h  imageViewer.cpp  imageViewer.h  imageViewer.ui  main.cpp  package.xml
ROS/omega_camera/: CMakeLists.txt  README.md  package.xml
ROS/omega_camera/include/omega_camera/: ImageProcessing.h  OmegaMetadata.h
ROS/omega_camera/launch/: omega.launch  omega_rviz.launch  without_omega.launch
ROS/omega_camera/rviz/: omega.rviz
ROS/omega_camera/src/: ImageProcessing.cpp  omega_node.cpp
ROS/omega_msgs/: CMakeLists.txt  package.xml
ROS/omega_msgs/msg/: OmegaMetadata.msg
ROS/pcl_to_clp_data_sender/: CMakeLists.txt  main.cpp  package.xml
ROS/pcl_viewer/: CMakeLists.txt  README.md  main.cpp  package.xml  pclReceiver.cpp  pclReceiver.h  pclViewer.cpp  pclViewer.h  pclViewer.ui  pcl_viewer.launch
environment/: buildOmegaAsh.py  docker-compose.yaml  main.py
environment/postgres-data/global/: 1260  pg_control
environment/postgres-data/pg_stat/: global.stat
environment/src/: main.cpp
filesToCheckLater/environment/src/: CMakeLists.txt  Dockerfile
filesToCheckLater/src.old/modules/detect/: conftest.py  test.py
opcda-client/: requirements.txt
server/: serve.py
setup/: setup.service  setup.sh
src/: CMakeLists.txt  Colormap.h  IOManager.cpp  IOManager.h  ImageProcessing.cpp  ImageProcessing.h  SensorControlThread.cpp  SensorControlThread.h  TesteIO.cpp  TesteIO.h  Viewer.cpp  Viewer.h  WinDeployQt5.cmake  conftest.py  main.cpp  test.py
src/infra/opc/: serve.py
src/infra/opcda/: client.py
src/modules/detect/: CMakeLists.txt  main.cpp
ssh/: bephantbr-ed25519  bephantbr-ed25519.pub  known_hosts
teste/: CMakeLists.txt  main.cpp
