<?xml version="1.0"?>
<package format="2">
  <name>find_objects</name>
  <version>0.0.0</version>
  <description>The DataSender package</description>
  <maintainer email="contato@blackelephant.com.br">BlackElephant</maintainer>

  <license>0BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The <depend> tag is recommended for message dependencies.  -->
  <depend>sensor_msgs</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
