<?xml version="1.0"?>
<package format="2">
  <name>omega_msgs</name>
  <version>0.1.0</version>
  <description>ROS metadata message for omega nodes.</description>

  <maintainer email="thibaud.vilboux@arcure.net">Thibaud Vilboux</maintainer>
  <maintainer email="viachaslau.kachurka@arcure.net">Viachaslau Kachurka</maintainer>

  <license>0BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The <depend> tag is recommended for message dependencies.  -->

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>