<?xml version="1.0"?>
<package format="2">
  <name>pcl_viewer</name>
  <version>0.1.0</version>
  <description>The ros_pcl_viewer package</description>
  <maintainer email="thibaud.vilboux@arcure.net">Thibaud Vilboux</maintainer>

  <license>0BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The <depend> tag is recommended for message dependencies.  -->
  <depend>sensor_msgs</depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>